Example-Applications/kubernetes-example-ingress-busybox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  #ingressClassName: some-ingress-class  #(Optional: specify your IngressClass Name here)
  rules:
    - host: ingress-example.example.local #Change to match your hostname
      http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: web-front-1
                port:
                  number: 80
          - pathType: Prefix
            path: "/v2"
            backend:
              service:
                name: web-front-2
                port:
                  number: 80
          - pathType: Prefix
            path: "/v3"
            backend:
              service:
                name: web-front-3
                port:
                  number: 80
